# philips-airpurifier-coap

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: stale.yml  update-manifest.yml
custom_components/philips_airpurifier_coap/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  fan.py  helpers.py  humidifier.py  icons.json  light.py  manifest.json  model.py  number.py  select.py  sensor.py  strings.json  switch.py  timer.py
custom_components/philips_airpurifier_coap/devices/: __init__.py  base.py  legacy.py  new2_gen.py  new_gen.py
custom_components/philips_airpurifier_coap/translations/: bg.json  de.json  en.json  es.json  fr.json  nl.json  ro.json  sk.json
js/: main.js  main.min.js
tests/: __init__.py  conftest.py  test_helpers.py
tests/fixtures/: __init__.py  mock_data.py
